Section code agora é único por curso, refatoração visual